// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of the Dropdown control 1`] = `
<select
  className="ui-dropdown dropdown normal"
  disabled={false}
  onChange={[Function]}
  style={
    Object {
      "backgroundImage": "url(\\"data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16px' height='16px' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>\\")",
      "paddingLeft": "3.2px",
      "paddingRight": "16px",
    }
  }
  value="idstr2"
>
  <option
    key="0"
    value="idstr1"
  >
    lstr1
  </option>
  <option
    key="1"
    value="idstr2"
  >
    lstr2
  </option>
  <option
    key="2"
    value="idstr3"
  >
    lstr3
  </option>
</select>
`;

exports[`Disable the Dropdown control 1`] = `
<Dropdown
  className=""
  contentEditable={false}
  defaultVal="idstr2"
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  initialItem=""
  items={
    Array [
      Object {
        "label": "lstr1",
        "value": "idstr1",
      },
      Object {
        "label": "lstr2",
        "value": "idstr2",
      },
      Object {
        "label": "lstr3",
        "value": "idstr3",
      },
    ]
  }
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onSelect={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
>
  <select
    className="ui-dropdown dropdown normal disabled nohover"
    disabled={true}
    onChange={[Function]}
    style={
      Object {
        "backgroundImage": "url(\\"data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16px' height='16px' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>\\")",
        "paddingLeft": "3.2px",
        "paddingRight": "16px",
      }
    }
    value="idstr2"
  >
    <option
      key="0"
      value="idstr1"
    >
      lstr1
    </option>
    <option
      key="1"
      value="idstr2"
    >
      lstr2
    </option>
    <option
      key="2"
      value="idstr3"
    >
      lstr3
    </option>
  </select>
</Dropdown>
`;

exports[`Make the Dropdown control invisible 1`] = `
<select
  className="ui-dropdown dropdown normal invisible"
  disabled={false}
  onChange={[Function]}
  style={
    Object {
      "backgroundImage": "url(\\"data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16px' height='16px' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>\\")",
      "paddingLeft": "3.2px",
      "paddingRight": "16px",
    }
  }
  value="idstr2"
>
  <option
    key="0"
    value="idstr1"
  >
    lstr1
  </option>
  <option
    key="1"
    value="idstr2"
  >
    lstr2
  </option>
  <option
    key="2"
    value="idstr3"
  >
    lstr3
  </option>
</select>
`;

exports[`Test retrieval of Dropdown props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "initialItem": "",
  "items": Array [],
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onSelect": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "visible": true,
  "width": "",
}
`;

exports[`Test the Dropdown click event 1`] = `
<Dropdown
  className=""
  contentEditable={false}
  defaultVal="idstr1"
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  initialItem=""
  items={
    Array [
      Object {
        "label": "lstr1",
        "value": "idstr1",
      },
      Object {
        "label": "lstr2",
        "value": "idstr2",
      },
      Object {
        "label": "lstr3",
        "value": "idstr3",
      },
    ]
  }
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onSelect={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
>
  <select
    className="ui-dropdown dropdown normal"
    disabled={false}
    onChange={[Function]}
    style={
      Object {
        "backgroundImage": "url(\\"data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16px' height='16px' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>\\")",
        "paddingLeft": "3.2px",
        "paddingRight": "16px",
      }
    }
    value="idstr1"
  >
    <option
      key="0"
      value="idstr1"
    >
      lstr1
    </option>
    <option
      key="1"
      value="idstr2"
    >
      lstr2
    </option>
    <option
      key="2"
      value="idstr3"
    >
      lstr3
    </option>
  </select>
</Dropdown>
`;
